--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,9 @@ dependencies {
     compile 'com.twitter.sdk.android:twitter:3.1.1'
     compile 'com.github.apl-devs:appintro:v4.2.2'
     compile 'com.thoughtbot:expandablecheckrecyclerview:1.4'
+    compile 'com.google.firebase:firebase-core:16.0.0'
+    compile 'com.google.firebase:firebase-messaging:17.1.0'
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'com.google.gms.google-services'
