--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.thoughtbot:expandablecheckrecyclerview:1.4'
     compile 'com.google.firebase:firebase-core:16.0.0'
     compile 'com.google.firebase:firebase-messaging:17.1.0'
+    compile 'com.wesleyelliott:camera2-video:0.0.2'
     testCompile 'junit:junit:4.12'
 }
 
